--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description_content_type = text/markdown
 version: file: VERSION
 keywords = Sunways, Solar Panel, Inverter, Photovoltaics, PV
 license = MIT
-author = Martin Letenay, Marcel Blijleven
+author = Chris Leo
 author_email = chrisleo.yu.cn@gmail.com
 url = https://github.com/chrisleo/sunways
 classifiers =
