--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ keywords = Sunways, Solar Panel, Inverter, Photovoltaics, PV
 license = MIT
 author = Chris Leo
 author_email = chrisleo.yu.cn@gmail.com
-url = https://github.com/chrisleo/sunways
+url = https://github.com/Chriss-Leo/sunways
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
